# lore

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  WORKLOG.md
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
docs/: lore-business-model.md  lore-product-concept.md  lore-technical-requirements.md
src/: lib.rs  main.rs
src/capture/: memory.rs  mod.rs
src/capture/watchers/: aider.rs  amp.rs  claude_code.rs  cline.rs  codex.rs  common.rs  continue_dev.rs  cursor.rs  gemini.rs  kilo_code.rs  mod.rs  opencode.rs  roo_code.rs  test_common.rs  vscode_extension.rs
src/cli/: format.rs  mod.rs
src/cli/commands/: annotate.rs  blame.rs  cloud.rs  completions.rs  config.rs  context.rs  current.rs  daemon.rs  db.rs  delete.rs  doctor.rs  export.rs  hooks.rs  import.rs  init.rs  insights.rs  link.rs  login.rs  logout.rs  mcp.rs  memories.rs  mod.rs  search.rs  sessions.rs  show.rs  status.rs  summarize.rs  sync.rs  tag.rs  unlink.rs
src/cloud/: client.rs  credentials.rs  encryption.rs  mod.rs
src/config/: mod.rs
src/daemon/: mod.rs  server.rs  state.rs  sync.rs  watcher.rs
src/git/: mod.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/storage/: db.rs  mod.rs  models.rs
src/summarize/: mod.rs  prompt.rs  provider.rs
src/sync/: encryption.rs  gitref.rs  keystore.rs  mod.rs  store.rs
tests/: cli_integration.rs
