[package]
name = "lore"
version = "0.1.0"
edition = "2021"
description = "Reasoning history for code - capture the story behind your commits"
authors = ["Chris Franzer"]
license = "MIT"
repository = "https://github.com/wemfore/lore"
keywords = ["git", "ai", "developer-tools", "version-control"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
colored = "2"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File watching (for daemon, later)
# notify = "6"

# Git
git2 = "0.18"

# Async (for daemon, later)
# tokio = { version = "1", features = ["full"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
dirs = "5"
glob = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "lore"
path = "src/main.rs"
