[package]
name = "lore"
version = "0.1.0"
edition = "2021"
description = "Reasoning history for code - capture the story behind your commits"
authors = ["Chris Franzer"]
license = "Apache-2.0"
repository = "https://github.com/redactyl/lore"
keywords = ["git", "ai", "developer-tools", "version-control"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
colored = "2"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# File watching (for daemon)
notify = "6"
notify-debouncer-mini = "0.4"

# Git
git2 = "0.18"

# Async (for daemon)
tokio = { version = "1", features = ["full"] }

# Logging for daemon
tracing-appender = "0.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
dirs = "5"
glob = "0.3"
libc = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "lore"
path = "src/main.rs"
